add verify Apple receipt data
